--- a/VGG16.ipynb
+++ b/VGG16.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## flower classification"
+    "## image classification"
    ]
   },
   {
